fix warnings, remove outdated server test